changed in style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cwiczenia 12.12</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Ćwiczenia 12.12</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam aliquam perspiciatis fugit dolorem nobis accusantium voluptas magnam ipsa laborum? Odio explicabo, sit minus ipsa voluptate ut corrupti blanditiis vero nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam iure commodi cum repellendus, nemo quia quae dicta laudantium quo reprehenderit eveniet voluptate provident, modi vero minus labore inventore veritatis amet!</p>
 </body>
 </html>
